fix(form): icon on input text spacing

--- a/packages/form/src/ui-input.scss
+++ b/packages/form/src/ui-input.scss
@@ -46,5 +46,5 @@
 }
 
 .inputIcon {
-    padding: 5px 5px 5px calc(var(--texts-large) * 1.25);
+    padding-left: calc(var(--texts-large) * 1.25) !important;
 }
